<resources>
    <string name="app_name">Where is it?</string>

    <string name="title_activity_start">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Registration</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="regrequest">Don\'t have an account? create one here…</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="logrequest">Have an account? login here</string>
    <string name="loading_title">Loading…</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="userpasswrong">Username or password is wrong</string>
    <string name="networkerror">Check connection</string>
    <string name="succlogin">Logined successfully</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="fname">Family Name</string>
    <string name="enter_fname">Enter Family Name</string>
    <string name="succregister">Account created</string>
    <string name="userconflict">This username is duplicate</string>
    <string name="ilost">ilost</string>
    <string name="ifound">iFound</string>
    <string name="adlist">Ad List</string>
    <string name="myaccount">My Account</string>
    <string name="support">Support us</string>
    <string name="logout">User logout</string>
    <string name="enter">Enter</string>
    <string name="ourstatistic">Our statistic</string>
    <string name="usercount_lable">User count:</string>
    <string name="lostadcount_lable">iLost Count:</string>
    <string name="foundcount_lable">iFound count:</string>
    <string name="matchcount_lable">Matched count:</string>
    <string name="pleaselogin">Please login first</string>
    <string name="lostsubmit_title">Please enter your lost item information</string>
    <string name="whatlost">What have you lost?</string>
    <string name="lostdesc">Describe</string>
    <string name="browse">Do you have a photo?</string>
    <string name="lostsubmit">Submit Ad</string>
    <string name="lostcontact">Contact number</string>
    <string name="datepicker">Date and Time</string>
    <string name="lostdate">When did you lost it?</string>
    <string name="lostlocation">Where did you lost it?</string>
    <string name="locationpicker">Location</string>
    <string name="lostreward">How much reward?</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="selectlocation">Select Location</string>

    <string name="about">About us</string>
    <string name="loginmsg">User Login</string>
    <string name="gologin">Login or Register</string>
    <string name="nologin">Nologin</string>
    <string name="succlogout">Logout successfully</string>
    <string name="lostimage">Do you have a photo?</string>
    <string name="thumbnail">thumbnail</string>
    <string name="submitlocation">Select this Location</string>
    <string name="location">Select Location</string>
    <string name="tags">Tags</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="foundsubmit_title">Please enter the found Item information</string>
    <string name="whatfound">What have you found?</string>
    <string name="founddesc">Describe</string>
    <string name="founddate">When did you find it?</string>
    <string name="adlistplaceholer_name">Golden Watch</string>
    <string name="adlistplaceholer_desc">It was a golden watch</string>
    <string name="adlistplaceholer_date">15/05/2017</string>
    <string name="preference">Preference</string>
    <string name="prefdesc">Description</string>
    <string name="preftags">Tags</string>
    <string name="lostcontacttxt">How to contact you?</string>
    <string name="registerBTN">Register</string>

    <string name="title_activity_splash">Welcome</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
