<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="56dp"
    tools:context="com.ssdev.saeedsina.lostfound.MyActivities.MainActivity"
    android:orientation="vertical"
    android:background="@color/yellow">
    <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:textColor="@color/blue"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        />
    <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="8dp">
        <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
            android:id="@+id/etext_login_username"
            android:layout_width="match_parent"
            android:gravity="right"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/blue"
            android:textColor="@color/blue"/>
    </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

    <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp">
        <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
            android:id="@+id/etext_login_password"
            android:layout_width="match_parent"
            android:gravity="right"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/blue"
            />
    </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

    <com.ssdev.saeedsina.lostfound.MyViews.MyButton
        android:id="@+id/btn_login"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
        android:id="@+id/txt_regrequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:text="@string/regrequest"
        android:gravity="center"
        android:textSize="16sp"/>
</LinearLayout>
