<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellow"
    tools:context="com.ssdev.saeedsina.lostfound.MyActivities.MenuActivity"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="right"
        >
        <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ourstatistic"
            android:textSize="20sp"
            android:textColor="@color/blue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:layout_gravity="center">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_weight="0.5"
               android:gravity="center">

               <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                   android:id="@+id/usercount"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:textSize="15sp"
                   android:textColor="@color/blue"
                   android:text="22" />

               <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:text="@string/usercount_lable"
                   android:textSize="15sp"
                   android:textColor="@color/blue" />
           </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:gravity="center">

                <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                    android:id="@+id/lostadcount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="@color/blue"
                    android:text="15" />

                <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lostadcount_lable"
                    android:textSize="15sp"
                    android:textColor="@color/blue" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:gravity="center">

                <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                    android:id="@+id/foundcount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="@color/blue"
                    android:text="22" />

                <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/foundcount_lable"
                    android:textSize="15sp"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:gravity="center">

                <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                    android:id="@+id/matchcount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="@color/blue"
                    android:text="15" />

                <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/matchcount_lable"
                    android:textSize="15sp"
                    android:textColor="@color/blue" />

            </LinearLayout>

    </LinearLayout>

        <com.ogaclejapan.arclayout.ArcLayout
        android:id="@+id/arc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:arc_origin="center"
        app:arc_color="@color/transparentWhite"
        app:arc_radius="168dp"
        app:arc_axisRadius="120dp"
        app:arc_freeAngle="false"
        android:layout_marginTop="100dp"
        app:arc_reverseAngle="false"
        >
        <com.ssdev.saeedsina.lostfound.MyViews.MyButton
            android:tag="no"
            android:id="@+id/btn_ilost"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/ilost"
            android:textColor="#FFFFFF"
            android:background="@drawable/light_blue_oval_selector"
            app:arc_origin="center"
            />
        <com.ssdev.saeedsina.lostfound.MyViews.MyButton
            android:id="@+id/btn_logout"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="#FFFFFF"
            android:background="@drawable/light_blue_oval_selector"
            app:arc_origin="center"
            />
        <com.ssdev.saeedsina.lostfound.MyViews.MyButton
            android:id="@+id/btn_support"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/support"
            android:textColor="#FFFFFF"
            android:background="@drawable/light_blue_oval_selector"
            app:arc_origin="center"
            />

        <com.ssdev.saeedsina.lostfound.MyViews.MyButton
            android:id="@+id/btn_adlist"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/adlist"
            android:textColor="#FFFFFF"
            android:background="@drawable/light_blue_oval_selector"
            app:arc_origin="center"
            />
        <com.ssdev.saeedsina.lostfound.MyViews.MyButton
            android:id="@+id/btn_myaccount"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/myaccount"
            android:textColor="#FFFFFF"
            android:background="@drawable/light_blue_oval_selector"
            app:arc_origin="center"
            />
        <com.ssdev.saeedsina.lostfound.MyViews.MyButton
            android:id="@+id/btn_enter"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/enter"
            android:textColor="#FFFFFF"
            android:background="@drawable/light_blue_oval_selector"
            app:arc_origin="center"
            />
        <com.ssdev.saeedsina.lostfound.MyViews.MyButton
            android:id="@+id/btn_ifound"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/ifound"
            android:textColor="#FFFFFF"
            android:background="@drawable/light_blue_oval_selector"
            app:arc_origin="center"
            />

    </com.ogaclejapan.arclayout.ArcLayout>

    </LinearLayout>
</LinearLayout>