<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="56dp"
    tools:context="com.ssdev.saeedsina.lostfound.MyActivities.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/yellow">
    <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:textColor="@color/blue"
        android:text="@string/register"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        />

    <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp">
        <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
            android:imeOptions="actionNext"
            android:id="@+id/etext_registration_name"
            android:gravity="right"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/blue"
            android:textColor="@color/blue"
            />
    </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

    <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp">
        <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
            android:imeOptions="actionNext"
            android:id="@+id/etext_registration_fname"
            android:gravity="right"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fname"
            android:textColorHint="@color/blue"
            android:textColor="@color/blue"
            />
    </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

    <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp">
        <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
            android:imeOptions="actionNext"
            android:id="@+id/etext_registration_username"
            android:gravity="right"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/blue"
            android:textColor="@color/blue"
            />
    </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

    <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp">
        <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
            android:id="@+id/etext_registration_email"
            android:gravity="right"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/blue"
            android:textColor="@color/blue"
            />
    </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

    <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp">
        <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
            android:id="@+id/etext_registration_password"
            android:gravity="right"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/blue"
            android:textColor="@color/blue"
            />
    </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

    <com.ssdev.saeedsina.lostfound.MyViews.MyButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        />
    <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
        android:id="@+id/txt_logrequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:text="@string/logrequest"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>
</LinearLayout>
