<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:background="@color/yellow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="40dp"
            tools:context="com.ssdev.saeedsina.lostfound.MyActivities.SubmitLostActivity">

            <com.ssdev.saeedsina.lostfound.MyViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lostsubmit_title"
                android:textColor="@color/blue"
                android:textSize="15sp"/>

            <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
                    android:imeOptions="actionNext"
                    android:id="@+id/etext_lostsubmit_what"
                    android:gravity="right"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/whatlost"
                    android:textColorHint="@color/blue"
                    android:textColor="@color/blue"/>
            </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

            <com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <com.ssdev.saeedsina.lostfound.MyViews.MyEditText
                    android:imeOptions="actionNext"
                    android:id="@+id/etext_lostsubmit_desc"
                    android:gravity="right"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/whatlostdesc"
                    android:textColorHint="@color/blue"
                    android:textColor="@color/blue"/>
            </com.ssdev.saeedsina.lostfound.MyViews.MyEditTextWrapp>

            <com.ssdev.saeedsina.lostfound.MyViews.MyButton
                android:id="@+id/btn_lostbrowse"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/browse"
                android:textColor="@color/white"/>
            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.ssdev.saeedsina.lostfound.MyViews.MyButton
                android:id="@+id/btn_lostsubmit"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/lostsubmit"
                android:textColor="@color/white"/>
        </LinearLayout>
</ScrollView>